<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.nobsratings.nobs.WhatWeDoFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/RelativeView">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/top_box"
            android:background="#1A1A1A">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="What We Do"
                android:textAllCaps="true"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:id="@+id/textView2"
                android:layout_marginTop="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/what_we_do_intro"
                android:textAlignment="center"
                android:layout_margin="10dp"
                android:layout_below="@+id/textView2"
                android:textColor="@color/white"
                android:id="@+id/textView" />

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_below="@+id/textView"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:id="@+id/no_bullshit"
                android:src="@drawable/nobsworld"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/top_box"
            android:id="@+id/what_are_we_doing_box">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Why Are We Doing This?"
                android:textAllCaps="true"
                android:id="@+id/what_are_we_doing_heading"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                android:layout_marginTop="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/why_are_we_doing_text"
                android:id="@+id/textView4"
                android:textColor="#1A1A1A"
                android:textAlignment="center"
                android:layout_margin="10dp"
                android:layout_below="@+id/what_are_we_doing_heading"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/what_are_we_doing_box"
            android:background="#1A1A1A"
            android:id="@+id/our_rating_process_box">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Our Rating Process"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:id="@+id/our_rating_process_heading"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/the_five_pillars"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"
                android:textAllCaps="true"
                android:layout_below="@id/our_rating_process_heading"
                android:id="@+id/five_pillars_text"
                android:layout_margin="10dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="The NoBS rating is an all-encompassing social rating system which accounts for multiple factors:"
                android:id="@+id/our_rating_process_text"
                android:textColor="@color/white"
                android:layout_below="@id/five_pillars_text"
                android:layout_margin="10dp"
                android:textAlignment="center"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/environment_image"
                android:layout_toLeftOf="@+id/community_image"
                android:layout_margin="10dp"
                android:layout_below="@id/our_rating_process_text"
                android:src="@drawable/environment"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Environment"
                android:id="@+id/environment_text"
                android:layout_alignLeft="@+id/environment_image"
                android:layout_alignRight="@+id/environment_image"
                android:layout_margin="10dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12dp"
                android:layout_below="@id/environment_image"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/community_image"
                android:layout_below="@id/our_rating_process_text"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:src="@drawable/community"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Local Community \nEngagement"
                android:textAlignment="center"
                android:id="@+id/community_text"
                android:layout_below="@id/community_image"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"
                android:textSize="12dp"
                android:layout_margin="10dp"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/handshake_image"
                android:layout_toRightOf="@+id/community_image"
                android:layout_margin="10dp"
                android:layout_below="@id/our_rating_process_text"
                android:src="@drawable/fair"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Fair Trade"
                android:id="@+id/handshake_text"
                android:textColor="@color/white"
                android:layout_alignLeft="@+id/handshake_image"
                android:layout_alignRight="@+id/handshake_image"
                android:layout_margin="10dp"
                android:textSize="12dp"
                android:textAlignment="center"
                android:layout_below="@id/handshake_image"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/labour_image"
                android:layout_toLeftOf="@+id/center_holder"
                android:layout_margin="10dp"
                android:layout_below="@id/community_text"
                android:src="@drawable/labour"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Labour Conditions"
                android:id="@+id/labour_text"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="12dp"
                android:layout_alignLeft="@+id/labour_image"
                android:layout_alignRight="@+id/labour_image"
                android:layout_margin="10dp"
                android:layout_below="@id/labour_image"/>

            <View
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_below="@id/community_text"
                android:layout_centerHorizontal="true"
                android:id="@+id/center_holder"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/like_image"
                android:layout_toRightOf="@+id/center_holder"
                android:layout_margin="10dp"
                android:layout_below="@id/community_text"
                android:src="@drawable/like"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Pro-Consumer Behaviour"
                android:id="@+id/like_text"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="12dp"
                android:layout_alignLeft="@+id/like_image"
                android:layout_alignRight="@+id/like_image"
                android:layout_margin="10dp"
                android:layout_below="@id/like_image"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/how_we_do_it"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                android:layout_below="@id/like_text"
                android:layout_margin="10dp"
                android:id="@+id/how_we_do_it" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="As easy as 1,2,3:"
                android:layout_below="@id/how_we_do_it"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"
                android:id="@+id/one_two_three" />

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:id="@+id/image_one"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/one_two_three"
                android:layout_margin="10dp"
                android:src="@drawable/collect"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_below="@id/image_one"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                android:text="@string/one_text"
                android:id="@+id/text_one"
                android:layout_margin="10dp"/>

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:id="@+id/image_two"
                android:layout_below="@id/text_one"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:src="@drawable/verify"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/two_text"
                android:textColor="@color/white"
                android:layout_below="@id/image_two"
                android:textAlignment="center"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:id="@+id/text_two" />

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_below="@id/text_two"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:id="@+id/image_three"
                android:src="@drawable/calculate"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/three_text"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                android:layout_below="@id/image_three"
                android:layout_margin="10dp"
                android:id="@+id/text_three" />

        </RelativeLayout>
    </RelativeLayout>

</ScrollView>
